samples/_failures_safe/1761368070_34178e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e55f1a59.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_e55f1a59.c:142:5: error: expected expression at end of input
  142 |     for (int i = 0; i < a->rows;
      |     ^~~
./samples/SAFE/__tmp_e55f1a59.c:142:5: error: expected declaration or statement at end of input
